Added Responsive Hero Section

--- a/index.html
+++ b/index.html
@@ -32,5 +32,24 @@
         <img src="./logos/MdiCartOutline.svg" alt="" />
       </nav>
     </header>
+
+    <main>
+      <div class="hero-section">
+        <div class="hero-content">
+          <h1 class="hero-title">Start your Journey as Influencer</h1>
+          <p class="hero-description">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem
+            vestibulum sed scelerisque eros. Lectus faucibus.
+          </p>
+          <button class="hero-button">
+            Prebook now <img src="./logos/HugeiconsArrowRight02.svg" alt="" />
+          </button>
+        </div>
+        <div class="hero-image">
+          <img src="./images/Circle design.svg" alt="" class="hero-bg" />
+          <img src="./images/main-camera.png" alt="" />
+        </div>
+      </div>
+    </main>
   </body>
 </html>
