Added Sponsors Seciotion for both desktop and mobile view

--- a/index.html
+++ b/index.html
@@ -50,6 +50,17 @@
           <img src="./images/main-camera.png" alt="" />
         </div>
       </div>
+      <div class="horizontal-rule"></div>
+      <div class="sponsors">
+        <img src="./logos/Alibaba.svg" alt="" />
+        <img src="./logos/Amazon.svg" alt="" />
+        <img src="./logos/Daraz.pk Logo.svg" alt="" />
+        <img src="./logos/Ebay.svg" alt="" />
+        <img src="./logos/Walmart.svg" alt="" />
+        <img src="./logos/Target.svg" alt="" />
+        <img src="./logos/Rakuten.svg" alt="" />
+      </div>
+      <div class="horizontal-rule"></div>
     </main>
   </body>
 </html>
