--- a/index.html
+++ b/index.html
@@ -61,6 +61,188 @@
         <img src="./logos/Rakuten.svg" alt="" />
       </div>
       <div class="horizontal-rule"></div>
+
+      <section class="collection">
+        <h2 class="collection-title">Popular Collection</h2>
+        <div class="collection-cards">
+          <div class="card">
+            <img src="./images/tripod.png" alt="" />
+            <h3 class="card-title">Product Name</h3>
+            <h1 class="price">$980.25</h1>
+            <div class="rating">
+              <div class="stars">
+                <img src="./MaterialSymbolsStar.svg" alt="" />
+                <img src="./MaterialSymbolsStar.svg" alt="" />
+                <img src="./MaterialSymbolsStar.svg" alt="" />
+                <img src="./MaterialSymbolsStar.svg" alt="" />
+                <img src="./MaterialSymbolsStarHalf.svg" alt="" />
+              </div>
+              <p class="rating-value">4.99</p>
+            </div>
+            <p class="property">
+              Wordwide shifting <br />available <br />
+              Buyers protection possible!
+            </p>
+          </div>
+          <div class="card">
+            <img src="./images/single-light.png" alt="" />
+            <h3 class="card-title">Product Name</h3>
+            <h1 class="price">$980.25</h1>
+            <div class="rating">
+              <div class="stars">
+                <img src="./MaterialSymbolsStar.svg" alt="" />
+                <img src="./MaterialSymbolsStar.svg" alt="" />
+                <img src="./MaterialSymbolsStar.svg" alt="" />
+                <img src="./MaterialSymbolsStar.svg" alt="" />
+                <img src="./MaterialSymbolsStarHalf.svg" alt="" />
+              </div>
+              <p class="rating-value">4.99</p>
+            </div>
+            <p class="property">
+              Wordwide shifting <br />available <br />
+              Buyers protection possible!
+            </p>
+          </div>
+          <div class="card">
+            <img src="./images/setup.png" alt="" />
+            <h3 class="card-title">Product Name</h3>
+            <h1 class="price">$980.25</h1>
+            <div class="rating">
+              <div class="stars">
+                <img src="./MaterialSymbolsStar.svg" alt="" />
+                <img src="./MaterialSymbolsStar.svg" alt="" />
+                <img src="./MaterialSymbolsStar.svg" alt="" />
+                <img src="./MaterialSymbolsStar.svg" alt="" />
+                <img src="./MaterialSymbolsStarHalf.svg" alt="" />
+              </div>
+              <p class="rating-value">4.99</p>
+            </div>
+            <p class="property">
+              Wordwide shifting <br />available <br />
+              Buyers protection possible!
+            </p>
+          </div>
+          <div class="card">
+            <img src="./images/airpod.png" alt="" />
+            <h3 class="card-title">Product Name</h3>
+            <h1 class="price">$980.25</h1>
+            <div class="rating">
+              <div class="stars">
+                <img src="./MaterialSymbolsStar.svg" alt="" />
+                <img src="./MaterialSymbolsStar.svg" alt="" />
+                <img src="./MaterialSymbolsStar.svg" alt="" />
+                <img src="./MaterialSymbolsStar.svg" alt="" />
+                <img src="./MaterialSymbolsStarHalf.svg" alt="" />
+              </div>
+              <p class="rating-value">4.99</p>
+            </div>
+            <p class="property">
+              Wordwide shifting <br />available <br />
+              Buyers protection possible!
+            </p>
+          </div>
+          <div class="card">
+            <img src="./images/camera.png" alt="" />
+            <h3 class="card-title">Product Name</h3>
+            <h1 class="price">$980.25</h1>
+            <div class="rating">
+              <div class="stars">
+                <img src="./MaterialSymbolsStar.svg" alt="" />
+                <img src="./MaterialSymbolsStar.svg" alt="" />
+                <img src="./MaterialSymbolsStar.svg" alt="" />
+                <img src="./MaterialSymbolsStar.svg" alt="" />
+                <img src="./MaterialSymbolsStarHalf.svg" alt="" />
+              </div>
+              <p class="rating-value">4.99</p>
+            </div>
+            <p class="property">
+              Wordwide shifting <br />available <br />
+              Buyers protection possible!
+            </p>
+          </div>
+          <div class="card">
+            <img src="./images/drone.png" alt="" />
+            <h3 class="card-title">Product Name</h3>
+            <h1 class="price">$980.25</h1>
+            <div class="rating">
+              <div class="stars">
+                <img src="./MaterialSymbolsStar.svg" alt="" />
+                <img src="./MaterialSymbolsStar.svg" alt="" />
+                <img src="./MaterialSymbolsStar.svg" alt="" />
+                <img src="./MaterialSymbolsStar.svg" alt="" />
+                <img src="./MaterialSymbolsStarHalf.svg" alt="" />
+              </div>
+              <p class="rating-value">4.99</p>
+            </div>
+            <p class="property">
+              Wordwide shifting <br />available <br />
+              Buyers protection possible!
+            </p>
+          </div>
+          <div class="card">
+            <img src="./images/gear.png" alt="" />
+            <h3 class="card-title">Product Name</h3>
+            <h1 class="price">$980.25</h1>
+            <div class="rating">
+              <div class="stars">
+                <img src="./MaterialSymbolsStar.svg" alt="" />
+                <img src="./MaterialSymbolsStar.svg" alt="" />
+                <img src="./MaterialSymbolsStar.svg" alt="" />
+                <img src="./MaterialSymbolsStar.svg" alt="" />
+                <img src="./MaterialSymbolsStarHalf.svg" alt="" />
+              </div>
+              <p class="rating-value">4.99</p>
+            </div>
+            <p class="property">
+              Wordwide shifting <br />available <br />
+              Buyers protection possible!
+            </p>
+          </div>
+          <div class="card">
+            <img src="./images/lights.png" alt="" />
+            <h3 class="card-title">Product Name</h3>
+            <h1 class="price">$980.25</h1>
+            <div class="rating">
+              <div class="stars">
+                <img src="./MaterialSymbolsStar.svg" alt="" />
+                <img src="./MaterialSymbolsStar.svg" alt="" />
+                <img src="./MaterialSymbolsStar.svg" alt="" />
+                <img src="./MaterialSymbolsStar.svg" alt="" />
+                <img src="./MaterialSymbolsStarHalf.svg" alt="" />
+              </div>
+              <p class="rating-value">4.99</p>
+            </div>
+            <p class="property">
+              Wordwide shifting <br />available <br />
+              Buyers protection possible!
+            </p>
+          </div>
+          <div class="card">
+            <img src="./images/mic.png" alt="" />
+            <h3 class="card-title">Product Name</h3>
+            <h1 class="price">$980.25</h1>
+            <div class="rating">
+              <div class="stars">
+                <img src="./MaterialSymbolsStar.svg" alt="" />
+                <img src="./MaterialSymbolsStar.svg" alt="" />
+                <img src="./MaterialSymbolsStar.svg" alt="" />
+                <img src="./MaterialSymbolsStar.svg" alt="" />
+                <img src="./MaterialSymbolsStarHalf.svg" alt="" />
+              </div>
+              <p class="rating-value">4.99</p>
+            </div>
+            <p class="property">
+              Wordwide shifting <br />available <br />
+              Buyers protection possible!
+            </p>
+          </div>
+        </div>
+        <div class="see-more">
+          <button class="see-more-button">
+            See more <img src="./Group.svg" alt="" />
+          </button>
+        </div>
+      </section>
     </main>
   </body>
 </html>
