CTA and footer section completed without resposiveness

--- a/index.html
+++ b/index.html
@@ -243,6 +243,28 @@
           </button>
         </div>
       </section>
+      <section class="CTA">
+        <img src="./images/gear.png" alt="" class="cta-image" />
+        <div class="cta-content">
+          <h2 class="cta-title">Get your product featured</h2>
+          <p class="cta-description">
+            Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
+          </p>
+          <button class="cta-button">
+            Get started <img src="./logos/HugeiconsArrowRight02.svg" alt="" />
+      </section>
+      <footer>
+        <div class="footer-title">Influencer products</div>
+        <div class="footer-description">
+          <p>Copyright © 2020  influencer products</p>
+          <p>All rights reserved</p>
+        </div>
+        <div class="footer-links">
+          <a href="#">Privacy Policy</a>
+          <a href="#">Terms of Service</a>
+          <a href="#">Contact Us</a>
+        </div>
+      </footer>
     </main>
   </body>
 </html>
